--- a/ChangeLog
+++ b/ChangeLog
@@ -230,6 +230,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porz±dki w wewnêtrznym nazewnictwie obiektów (joi)
 * poprawione zwijanie linków (joi)
 * mo¿liwo¶æ automat. pobierania i instalacji modu³u spellchecker (adrian)
+* make clean uwzglêdnia opcj± MODULE_3RDPARTY w pliku spec modu³ów,
+  niestety Makefile od libgsm jest kiepsko napisany (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
