destdir i /usr/share
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2321 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -232,6 +232,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ automat. pobierania i instalacji modu³u spellchecker (adrian)
 * make clean uwzglêdnia opcj± MODULE_3RDPARTY w pliku spec modu³ów,
   niestety Makefile od libgsm jest kiepsko napisany (adrian)
+* make install: drobna poprawka zwi±zana ze zmienn± $DESTDIR i instalacj±
+  niektórych plików do /usr/share (mkostrze/adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
