--- a/README
+++ b/README
@@ -1,8 +1,8 @@
-Kadu, klient Gadu-Gadu dla Qt, wersja 0.3.9
+Kadu, klient Gadu-Gadu dla Qt
 
 +++ WYMAGANIA
- * Qt 3.0
- * szczegó³y w pomocy online http://www.kadu.net/install.html
+ * Qt 3.x
+ * szczegó³y w pomocy online http://www.kadu.net/doc.php
  
 +++ FICZERSY
  * status: offline, online, away, invisible
