--- a/ChangeLog
+++ b/ChangeLog
@@ -235,6 +235,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * make install: drobna poprawka zwi±zana ze zmienn± $DESTDIR i instalacj±
   niektórych plików do /usr/share (mkostrze/adrian)
 * patch vogela naprawiaj±cy eksport/import z moimi poprawkami (adrian)
+* ³apanie do linków w chacie/historii/panelu tak¿e polskich znaków (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
