--- a/ChangeLog
+++ b/ChangeLog
@@ -236,6 +236,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   niektórych plików do /usr/share (mkostrze/adrian)
 * patch vogela naprawiaj±cy eksport/import z moimi poprawkami (adrian)
 * ³apanie do linków w chacie/historii/panelu tak¿e polskich znaków (joi)
+* Skrypt Instaluj - Modu³y domy¶lnie statyczne nie podlegaj± wyborowi (Ron_K)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
