bramka ery - prefix 880
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2331 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -238,6 +238,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³apanie do linków w chacie/historii/panelu tak¿e polskich znaków (joi)
 * Skrypt Instaluj - Modu³y domy¶lnie statyczne nie podlegaj± wyborowi (Ron_K)
 * historia rozmowy: gdy klikniemy na altnik wy¶wietla siê pierwsza rozmowa (chilek)
+* bramka Ery obs³uguje nowy prefix Heyah: 880 (d7:R-k,attis/adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
