--- a/ChangeLog
+++ b/ChangeLog
@@ -237,10 +237,12 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * patch vogela naprawiaj±cy eksport/import z moimi poprawkami (adrian)
 * ³apanie do linków w chacie/historii/panelu tak¿e polskich znaków (joi)
 * Skrypt Instaluj - Modu³y domy¶lnie statyczne nie podlegaj± wyborowi (Ron_K)
-* historia rozmowy: gdy klikniemy na altnik wy¶wietla siê pierwsza rozmowa (chilek)
+* historia rozmowy: gdy klikniemy na altnick wy¶wietla siê pierwsza rozmowa (chilek)
 * bramka Ery obs³uguje nowy prefix Heyah: 880 (d7:R-k,attis/adrian)
 * ³atki bugiego poprawiaj±ce wybór dodatkowych ¶cie¿ek w zestawach ikon i
   d¼wiêków. do tego moje drobne modyfikacje "techniczne" (adrian)
+* historia rozmowy: aktualna data przesuwa siê wraz ze znalezionym wzorcem
+  (brakuje zaznaczania paragrafu w którym znaleziono wzorzec) (chilek)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
