--- a/ChangeLog
+++ b/ChangeLog
@@ -248,6 +248,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * http://kadu.net/mantis/bug_view_page.php?bug_id=0000289 (googie/chilek)
 * o zachowaniu kadu decyduje obecno¶æ konkretnych modu³ów dokuj±cych, a nie
   ogólnego modu³u docking + wiêksze uwspólnienie kodu w module docking (adrian)
+* nasza wiadomo¶æ do historii dopiero po potwierdzeniu, BUG_ID=276 (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
