"QGDict::hashKeyString: Invalid null key" -> /dev/null
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2354 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -250,6 +250,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ogólnego modu³u docking + wiêksze uwspólnienie kodu w module docking (adrian)
 * nasza wiadomo¶æ do historii dopiero po potwierdzeniu, BUG_ID=276 (adrian)
 * poprawiona opcja "Pomoc" w instalatorze "Instaluj" (adrian)
+* usuniêcie ostrze¿enia od Qt (QGDict::hashKeyString: Invalid null key) (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
