--- a/ChangeLog
+++ b/ChangeLog
@@ -251,6 +251,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nasza wiadomo¶æ do historii dopiero po potwierdzeniu, BUG_ID=276 (adrian)
 * poprawiona opcja "Pomoc" w instalatorze "Instaluj" (adrian)
 * usuniêcie ostrze¿enia od Qt (QGDict::hashKeyString: Invalid null key) (joi)
+* przy od¶wie¿aniu listy kontaktów pozycja pionowego suwaka siê nie zmienia (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
