%1 dla własnej przeglądarki nie jest konieczny
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2358 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -252,6 +252,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiona opcja "Pomoc" w instalatorze "Instaluj" (adrian)
 * usuniêcie ostrze¿enia od Qt (QGDict::hashKeyString: Invalid null key) (joi)
 * przy od¶wie¿aniu listy kontaktów pozycja pionowego suwaka siê nie zmienia (joi)
+* argument "%1" w polu "W³asna przegl±darka" nie jest konieczny (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
