--- a/ChangeLog
+++ b/ChangeLog
@@ -253,6 +253,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêcie ostrze¿enia od Qt (QGDict::hashKeyString: Invalid null key) (joi)
 * przy od¶wie¿aniu listy kontaktów pozycja pionowego suwaka siê nie zmienia (joi)
 * argument "%1" w polu "W³asna przegl±darka" nie jest konieczny (joi)
+* poprawki "make uninstall", nie wszystkie pliki kadu by³y usuwane (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
