--- a/ChangeLog
+++ b/ChangeLog
@@ -256,6 +256,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki "make uninstall", nie wszystkie pliki kadu by³y usuwane (adrian)
 * przeróbki instalatora by Sad Mephisto - postaæ wizarda i automatyczne
   sprawdzenie dostêpnych modu³ów (adrian)
+* wykrywanie b³êdów w ¶ci±ganiu plików w technologii autodownload i
+  ew. przerywanie dzia³ania configure (adrian)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
