domyślny kolor w chacie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2363 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -258,6 +258,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   sprawdzenie dostêpnych modu³ów (adrian)
 * wykrywanie b³êdów w ¶ci±ganiu plików w technologii autodownload i
   ew. przerywanie dzia³ania configure (adrian)
+* gdy domy¶lny kolor czcionki w chacie jest inny ni¿ czarny, to przy wyborze
+  koloru pojawia siê dodatkowy przycisk z tym kolorem, BUG_ID=50 (joi)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
