GG_STATUS_FRIENDS_MASK w module docking
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2371 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -263,6 +263,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * skrypt kadu-mozilla wspó³pracuje z now± Mozill± 1.7 (adrian)
 * poprawka segfaula w przypadku gdy nie ma zastawów emotionek
   zainstalowanych (michal)
+* w modu³ach dokowania jest uwzglêdniony status "tylko dla znajomych" (michal)
 
 +++ wersja 0.3.8 (20.04.2004)
 * zaaplikowany patch nazgula przyspieszajacy ekspansje emotikonow.
