--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,11 @@ lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
-+++ wersja 0.3.9
++++ wersja 0.4.0
+* patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
+  w oknie konfiguracji (adrian)
+
++++ wersja 0.3.9 (01.06.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
   gdy tak rzeczywi¶cie jest (joi)
 * Skrypt Instaluj -> naprawiony b³±d cudzys³owów w prefix i opcjach 
