--- a/ChangeLog
+++ b/ChangeLog
@@ -7,8 +7,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * patch kida, poprawiaj±cy wygl±d okna zarz±dzania ¶cie¿kami do plików
   w oknie konfiguracji (adrian)
 * poprawione 2 b³êdy zwi±zane z dymkami i docking gdy te pierwsze s± wy³±czone (joi)
+* patch vogela przenosz±cy obs³ugê zdarzenia zmiany statusu przez kontakt do
+  klasy GaduProtocol (adrian)
 
-+++ wersja 0.3.9 (01.06.2004)
++++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
   gdy tak rzeczywi¶cie jest (joi)
 * Skrypt Instaluj -> naprawiony b³±d cudzys³owów w prefix i opcjach 
