--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * patch vogela przenosz±cy obs³ugê zdarzenia zmiany statusu przez kontakt do
   klasy GaduProtocol (adrian)
 * tylko jedna para funkcji escapuj±cych: HtmlDocument::(un)escapeText (adrian)
+* na³o¿ony patch znany pod nazw± kadu-speedup oraz wspó³dzia³aj±cy
+  patch joi'ego kadu-speech (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
