--- a/ChangeLog
+++ b/ChangeLog
@@ -11,7 +11,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   klasy GaduProtocol (adrian)
 * tylko jedna para funkcji escapuj±cych: HtmlDocument::(un)escapeText (adrian)
 * na³o¿ony patch znany pod nazw± kadu-speedup oraz wspó³dzia³aj±cy
-  patch joi'ego kadu-speech (adrian)
+  patch joia kadu-speech (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
