--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * tylko jedna para funkcji escapuj±cych: HtmlDocument::(un)escapeText (adrian)
 * na³o¿ony patch znany pod nazw± kadu-speedup oraz wspó³dzia³aj±cy
   patch joia kadu-speech (adrian)
+* porz±dki w dcc czê¶æ pierwsza - wydzielenie klasy FileDccSocket (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
