patch bugiego - tylko kontakty z opisami
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2409 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * teksty w dialogu wyboru obrazka t³umacz± siê (chilek)
 * tytu³ g³ównego paska narzêdziowego t³umaczy siê (chilek)
 * kolejny porz±dkuj±cy patch vogela - sloty z EventManagera (adrian)
+* ³atka bugiego dodaj±ca opcjê pokazywania tylko kontaktów z opisami (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
