--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   s± animowane emotikony; przy w³±czonych animowanych emotikonach kopiowanie tekstu
   wraz z odpowiadaj±cym tekstem; usuniêcie wariowania pionowego suwaka w chacie przy
   kopiowaniu,  BUG_ID=285, BUG_ID=34, BUG_ID=203, topic=27166 (joi)
+* okno importu/eksportu: nie pokazujemy uinów równych zero (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
