--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   wraz z odpowiadaj±cym tekstem; usuniêcie wariowania pionowego suwaka w chacie przy
   kopiowaniu,  BUG_ID=285, BUG_ID=34, BUG_ID=203, topic=27166 (joi)
 * okno importu/eksportu: nie pokazujemy uinów równych zero (chilek)
+* usuniêty wyciek pamiêci w Chacie (po wczorejszych zmianach) (joi)
+* poprawione czyszczenie okna Chatu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
