--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno importu/eksportu: nie pokazujemy uinów równych zero (chilek)
 * usuniêty wyciek pamiêci w Chacie (po wczorejszych zmianach) (joi)
 * poprawione czyszczenie okna Chatu (joi)
+* po ostatnich zabawach Vogela/Adriana/Chilka nie dzia³a³o odbieranie
+  wiadomo¶ci - poprawione (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
