--- a/ChangeLog
+++ b/ChangeLog
@@ -26,7 +26,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawione czyszczenie okna Chatu (joi)
 * po ostatnich zabawach Vogela/Adriana/Chilka nie dzia³a³o odbieranie
   wiadomo¶ci - poprawione (joi)
-
+* kolejny porz±dkuj±cy patch vogela - likwidacja EventManagera (adrian)
+ 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
   gdy tak rzeczywi¶cie jest (joi)
