--- a/ChangeLog
+++ b/ChangeLog
@@ -27,7 +27,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * po ostatnich zabawach Vogela/Adriana/Chilka nie dzia³a³o odbieranie
   wiadomo¶ci - poprawione (joi)
 * kolejny porz±dkuj±cy patch vogela - likwidacja EventManagera (adrian)
- 
+* patch kida przerabiaj±cy dialogi wyboru ¶cie¿ek do zestawów oraz
+  edycji informacji o kontakcie na modalne (adrian)
+
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
   gdy tak rzeczywi¶cie jest (joi)
