--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kolejny porz±dkuj±cy patch vogela - likwidacja EventManagera (adrian)
 * patch kida przerabiaj±cy dialogi wyboru ¶cie¿ek do zestawów oraz
   edycji informacji o kontakcie na modalne (adrian)
+* po ostatnich zmianach vogela/kida/adriana/joi-a nie kompilowa³ siê autoresponder;
+  postulujê zmianê wersji na 0.3.10-cvs (chilek)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
