--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   edycji informacji o kontakcie na modalne (adrian)
 * po ostatnich zmianach vogela/kida/adriana/joi-a nie kompilowa³ siê autoresponder;
   postulujê zmianê wersji na 0.3.10-cvs (chilek)
+* modu³y echo, kadu_speech znowu sie kompiluj± po zmianach vogela ;) (michal)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
