--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * modu³y echo, kadu_speech znowu sie kompiluj± po zmianach vogela ;) (michal)
 * porz±dki w dcc czê¶æ druga - powstanie klasy DccManager z czê¶ci kodu
   znajduj±cego siê uprzednio w klasie Kadu (adrian)
+* ³atka bugiego udostêpniaj±ca opcjê wyrównania ikon statusów do nazwy
+  kontaktu przy w³±czonej opcji opisów na li¶cie kontaktów (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
