--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   znajduj±cego siê uprzednio w klasie Kadu (adrian)
 * ³atka bugiego udostêpniaj±ca opcjê wyrównania ikon statusów do nazwy
   kontaktu przy w³±czonej opcji opisów na li¶cie kontaktów (adrian)
+* patch vogela usuwaj±cy zmienne globalne kadusnr, kadusnw plus inne
+  drobne porz±dki z tym zwi±zane (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
