--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   drobne porz±dki z tym zwi±zane (adrian)
 * porz±dki w dcc czê¶æ trzecia - przeniesienie reszty kodu dotycz±cego dcc
   z klasy Kadu do klasy DccManager (adrian)
+* porz±dki w dcc czê¶æ czwarta - przeniesienie kodu dotycz±cego dcc
+  z klasy EventConfigSlots to klasy DccManager (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
