--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z klasy Kadu do klasy DccManager (adrian)
 * porz±dki w dcc czê¶æ czwarta - przeniesienie kodu dotycz±cego dcc
   z klasy EventConfigSlots to klasy DccManager (adrian)
+* porz±dki w dcc czê¶æ pi±ta - kod w dcc.cpp/h nie jest ju¿ wykorzystywany
+  w innych miejsach kadu, przygotowanie do wydzielenia modu³u (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
