--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   z klasy EventConfigSlots to klasy DccManager (adrian)
 * porz±dki w dcc czê¶æ pi±ta - kod w dcc.cpp/h nie jest ju¿ wykorzystywany
   w innych miejsach kadu, przygotowanie do wydzielenia modu³u (adrian)
+* patch vogela usuwaj±cy klasê EventConfigSlots (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
