--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w innych miejsach kadu, przygotowanie do wydzielenia modu³u (adrian)
 * patch vogela usuwaj±cy klasê EventConfigSlots (adrian)
 * usuniête zbêdne ju¿ pliki events.cpp, events.h (adrian)
+* wydzielenie modu³u dcc, domy¶lnie statyczny (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
