--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniête zbêdne ju¿ pliki events.cpp, events.h (adrian)
 * wydzielenie modu³u dcc, domy¶lnie statyczny (adrian)
 * po uruchomieniu jako root kadu wy¶wietla ostrze¿enie (adrian)
+* ³atka vogela usuwaj±ca wiêkszo¶æ zmiennych globalnych z gadu.h (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
