--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-Teksty w nawiasach na koñcu wpisu mówi± o tym, kto dokona³ poprawki
+eTeksty w nawiasach na koñcu wpisu mówi± o tym, kto dokona³ poprawki
 lub rozbudowy. Postaæ (x/y) oznacza, ¿e x jest pomys³odawc± lub
 podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
@@ -51,6 +51,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³atka vogela usuwaj±ca wiêkszo¶æ zmiennych globalnych z gadu.h (adrian)
 * modu³y dcc i voice nie korzystaj± ju¿ z funkcji libgadu, jedynie z metod
   klasy GaduProtocol, wywalone zbêdne zmienne globalne z modu³u dcc (adrian)
+* gdy za³adowaniu modu³u nie jest mo¿liwe w komunikacie jest pokazywana 
+  nazwa modu³u (michal)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
