--- a/ChangeLog
+++ b/ChangeLog
@@ -53,6 +53,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   klasy GaduProtocol, wywalone zbêdne zmienne globalne z modu³u dcc (adrian)
 * gdy za³adowaniu modu³u nie jest mo¿liwe w komunikacie jest pokazywana 
   nazwa modu³u (michal)
+* ³atka dorregaray'a dodaj±ca do modu³u autorespondera opcjê jednokrotnej
+  tylko odpowiedzi na czyj±¶ wiadomo¶æ (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
