--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nazwa modu³u (michal)
 * ³atka dorregaray'a dodaj±ca do modu³u autorespondera opcjê jednokrotnej
   tylko odpowiedzi na czyj±¶ wiadomo¶æ (adrian)
+* ³atka dorregaray'a dodaj±ca do modu³u autoaway opcje automatycznej zmiany
+  na status ukryty oraz automatycznego roz³±czania siê siê (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
