--- a/ChangeLog
+++ b/ChangeLog
@@ -62,6 +62,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   altnickach zawieraj±cych znaki specjalne html, np. znak mniejszo¶ci (adrian)
 * w konfiguracji wygl±dów dymków, w pozycji wyboru powiadomienia dodana
   pozycja "Set for all" (mast3r)
+* w konfiguracji mo¿na wybraæ jaki styl QT ma zostaæ u¿yty (michal) 
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
