--- a/ChangeLog
+++ b/ChangeLog
@@ -63,6 +63,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w konfiguracji wygl±dów dymków, w pozycji wyboru powiadomienia dodana
   pozycja "Set for all" (mast3r)
 * w konfiguracji mo¿na wybraæ jaki styl QT ma zostaæ u¿yty (michal) 
+* patch dorregaray'a dodaj±ca do modu³u autoaway opcjê automatycznej
+  zmiany opisu, ew. doklejenia czego¶ do poprzedniego (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
