--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zmiany opisu, ew. doklejenia czego¶ do poprzedniego (adrian)
 * wydzielenie do modu³u rejestracji/wyrejestrowania konta,
   zmiany/przypominania has³a (joi)
+* patch porz±dkuj±cy vogela - klasa reprezentuj±ca status (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
