--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wydzielenie do modu³u rejestracji/wyrejestrowania konta,
   zmiany/przypominania has³a (joi)
 * patch porz±dkuj±cy vogela - klasa reprezentuj±ca status (adrian)
+* 2 ³atki Vogela na 2 b³êdy: segfault przy wy³±czaniu Kadu oraz brak
+  po³±czenia z serwerami (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
