--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * 2 ³atki Vogela na 2 b³êdy: segfault przy wy³±czaniu Kadu oraz brak
   po³±czenia z serwerami (joi)
 * drobne poprawki w api klasy Status (adrian)
+* usuwanie kontrolek z konfiguracji przy wy³adowywaniu modu³u dcc (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
