--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   po³±czenia z serwerami (joi)
 * drobne poprawki w api klasy Status (adrian)
 * usuwanie kontrolek z konfiguracji przy wy³adowywaniu modu³u dcc (joi)
+* poprawki w kodzie obs³ugi naszego statusu (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
