--- a/ChangeLog
+++ b/ChangeLog
@@ -73,6 +73,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne poprawki w api klasy Status (adrian)
 * usuwanie kontrolek z konfiguracji przy wy³adowywaniu modu³u dcc (joi)
 * poprawki w kodzie obs³ugi naszego statusu (adrian)
+* dcc nie u¿ywa bezpo¶rednio mechanizmu zdarzeñ qt + po poproszeniu
+  odbiorcy o nazwi±zanie po³±czenia czekamy tylko 3 sek. (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
