--- a/ChangeLog
+++ b/ChangeLog
@@ -76,6 +76,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc nie u¿ywa bezpo¶rednio mechanizmu zdarzeñ qt + po poproszeniu
   odbiorcy o nazwi±zanie po³±czenia czekamy tylko 3 sek. (adrian)
 * dalsza walka vogela ze statusami - sygna³ changingStatus (adrian)
+* drobne optymalizacje libgadu, IconsManagera, GaduProtocol (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
