--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   odbiorcy o nazwi±zanie po³±czenia czekamy tylko 3 sek. (adrian)
 * dalsza walka vogela ze statusami - sygna³ changingStatus (adrian)
 * drobne optymalizacje libgadu, IconsManagera, GaduSocketNotifiers (joi)
+* ³atka vogela - porz±dki w tokenach i przenosiny klasy Status (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
