poprawione przesyłanie obrazków ([] [IMAGE a] wywracało Kadu)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2495 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -79,6 +79,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne optymalizacje libgadu, IconsManagera, GaduSocketNotifiers (joi)
 * ³atka vogela - porz±dki w tokenach i przenosiny klasy Status (adrian)
 * eskejpowanie znaków htmla przy zapisie do historii statusów z opisami (joi)
+* poprawione parsowanie wiadomo¶ci pod k±tem obrazków je¿eli w tre¶ci
+  wiadomo¶ci przed obrazkiem gdzie¶ pojawi³ siê znak ']' (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
