--- a/ChangeLog
+++ b/ChangeLog
@@ -93,6 +93,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³atka SadMephisto dodaj±ca do modu³u mo¿liwo¶æ wyboru koloru szyfrowanych wiadomo¶ci (joi)
 * usuwanie kontrolek z konfiguracji przy wy³adowywaniu modu³u encryption
   skrócenie kodu dodaj±cego ColorButtony do konfiguracji (joi)
+* ³atka Vogela ustawiaj±ca w³a¶ciw± ikonê statusu przy ³±czeniu siê z serwerem (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
