--- a/ChangeLog
+++ b/ChangeLog
@@ -94,6 +94,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuwanie kontrolek z konfiguracji przy wy³adowywaniu modu³u encryption
   skrócenie kodu dodaj±cego ColorButtony do konfiguracji (joi)
 * ³atka Vogela ustawiaj±ca w³a¶ciw± ikonê statusu przy ³±czeniu siê z serwerem (joi)
+* wy¶wietlanie w³asnego statusu na li¶cie kontaktów znowu dzia³a (na razie ;)) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
