--- a/ChangeLog
+++ b/ChangeLog
@@ -95,6 +95,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   skrócenie kodu dodaj±cego ColorButtony do konfiguracji (joi)
 * ³atka Vogela ustawiaj±ca w³a¶ciw± ikonê statusu przy ³±czeniu siê z serwerem (joi)
 * wy¶wietlanie w³asnego statusu na li¶cie kontaktów znowu dzia³a (na razie ;)) (joi)
+* usuniêty b³±d powoduj±cy otwarcie okna rozmowy przy naci¶niêciu entera
+  na li¶cie kontaków mimo braku zaznaczenia (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
