--- a/ChangeLog
+++ b/ChangeLog
@@ -97,6 +97,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wy¶wietlanie w³asnego statusu na li¶cie kontaktów znowu dzia³a (na razie ;)) (joi)
 * usuniêty b³±d powoduj±cy otwarcie okna rozmowy przy naci¶niêciu entera
   na li¶cie kontaków mimo braku zaznaczenia (joi)
+* mo¿liwo¶æ wy³±czenia dymka w trayu (tego z w³asnym statusem i opisem co który klawisz myszki robi) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
