--- a/ChangeLog
+++ b/ChangeLog
@@ -99,6 +99,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   na li¶cie kontaków mimo braku zaznaczenia (joi)
 * mo¿liwo¶æ wy³±czenia dymka w trayu (tego z w³asnym statusem i opisem co który klawisz myszki robi) (joi)
 * usuniêty segfault w module encryption przy odbiorze klucza (joi)
+* drobna przebudowa powiadamiania z usuniêciem kilku b³êdów
+  opcja ignorowania zmian statusów zaraz po po³aczeniu z serwerem
+  uproszczenie modu³ów d¼wiêkowych (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
