--- a/ChangeLog
+++ b/ChangeLog
@@ -102,6 +102,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobna przebudowa powiadamiania z usuniêciem kilku b³êdów
   opcja ignorowania zmian statusów zaraz po po³aczeniu z serwerem
   uproszczenie modu³ów d¼wiêkowych (joi)
+* usuwanie kolejnych zbêdnych tagów z wiadomo¶ci (<wsp></wsp>) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
