możliwość wyłączenia dymków nad listą kontaktów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2510 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -103,6 +103,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   opcja ignorowania zmian statusów zaraz po po³aczeniu z serwerem
   uproszczenie modu³ów d¼wiêkowych (joi)
 * usuwanie kolejnych zbêdnych tagów z wiadomo¶ci (<wsp></wsp>) (joi)
+* mo¿liwo¶æ wy³±czenia dymka nad list± kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
