--- a/ChangeLog
+++ b/ChangeLog
@@ -107,7 +107,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * rozwi±zanie problemów z krzakami zamiast polskich znaków
   w smsach wys³anych przez bramkê idei (joi)
 * konfigurowalna ilo¶æ ostatnich opisów (joi)
-* mo¿liowo¶æ wybrania rogu, od którego bêdzie liczona pozycja dymków (joi)
+* mo¿liwo¶æ wybrania rogu, od którego bêdzie liczona pozycja dymków (joi)
+* ulepszona konfiguracja grup kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
