--- a/ChangeLog
+++ b/ChangeLog
@@ -109,6 +109,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * konfigurowalna ilo¶æ ostatnich opisów (joi)
 * mo¿liwo¶æ wybrania rogu, od którego bêdzie liczona pozycja dymków (joi)
 * ulepszona konfiguracja grup kontaktów (joi)
+* okna chatów w gnome nie powinny wyskakiwaæ poza ekranem (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
