--- a/ChangeLog
+++ b/ChangeLog
@@ -110,6 +110,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ wybrania rogu, od którego bêdzie liczona pozycja dymków (joi)
 * ulepszona konfiguracja grup kontaktów (joi)
 * okna chatów w gnome nie powinny wyskakiwaæ poza ekranem (joi)
+* mo¿liwo¶æ wy³±czenia pokazywania blokowanych i blokuj±cych na li¶cie kontaktów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
