--- a/ChangeLog
+++ b/ChangeLog
@@ -111,6 +111,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ulepszona konfiguracja grup kontaktów (joi)
 * okna chatów w gnome nie powinny wyskakiwaæ poza ekranem (joi)
 * mo¿liwo¶æ wy³±czenia pokazywania blokowanych i blokuj±cych na li¶cie kontaktów (joi)
+* Drobne poprawki do translacji (Ron_K)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
