--- a/ChangeLog
+++ b/ChangeLog
@@ -113,6 +113,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ wy³±czenia pokazywania blokowanych i blokuj±cych na li¶cie kontaktów (joi)
 * drobne poprawki do translacji (Ron_K)
 * porz±dki i poprawiona kompatybilno¶æ z Qt < 3.2 (joi)
+* poprawa b³êdu powiadomieñ - funkcja dzia³a³a tylko przy w³±czonej
+  opcji powiadamiania o wszystkich kontaktach (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
