--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porz±dki i poprawiona kompatybilno¶æ z Qt < 3.2 (joi)
 * poprawa b³êdu powiadomieñ - funkcja dzia³a³a tylko przy w³±czonej
   opcji powiadamiania o wszystkich kontaktach (joi)
+* poprawa g³upiego b³êdu w hintach - domy¶lne warto¶ci ustalane by³y dla modulu window_notify (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
