--- a/ChangeLog
+++ b/ChangeLog
@@ -119,6 +119,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zak³adki w konfiguracji mog± mieæ ikonki (o ile bêd± w zestawie) (joi)
 * poprawki w hintach dla modu³u tcl_scripting (joi)
 * w konfiguracji kolejny pseudo widget - "RadioGroup" (joi)
+* ³ata Vogela na obs³ugê statusów + moje zmiany, co by to dzia³a³o ;) + drobne optymalizacje (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
