--- a/ChangeLog
+++ b/ChangeLog
@@ -120,6 +120,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki w hintach dla modu³u tcl_scripting (joi)
 * w konfiguracji kolejny pseudo widget - "RadioGroup" (joi)
 * ³ata Vogela na obs³ugê statusów + moje zmiany, co by to dzia³a³o ;) + drobne optymalizacje (joi)
+* je¿eli w trakcie ³adowania modu³u autoaway ustawiony by³ status dostêpny,
+  to modu³ nie startowa³ prawid³owo - poprawione (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
