--- a/ChangeLog
+++ b/ChangeLog
@@ -123,6 +123,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * je¿eli w trakcie ³adowania modu³u autoaway ustawiony by³ status dostêpny,
   to modu³ nie startowa³ prawid³owo - poprawione (joi)
 * wybór przegl±darki do otwierania linków - patch Dorregaraya i moje spoore zmiany (joi)
+* poprawka Vogela na status "Tylko dla znajomych" (odznaczanie siê checkboksa przy po³±czeniu) (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
