--- a/ChangeLog
+++ b/ChangeLog
@@ -125,6 +125,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wybór przegl±darki do otwierania linków - patch Dorregaraya i moje spoore zmiany (joi)
 * poprawka Vogela na status "Tylko dla znajomych" (odznaczanie siê checkboksa przy po³±czeniu) (joi)
 * poprawiony b³±d wy¶wietlania statusu "niedostêpny z opisem" (joi)
+* autodownload obs³uguje archiwa w formacie tar.gz i tar.bz2 (adrian)
+* autodownload potrafi obs³u¿yæ archiwum zawieraj±ce katalog zgodny z nazw±
+  archiwum a nie z nazw± modu³u lub zestawu - normalizuje nazwê (adrian)
+* mo¿liwo¶æ konfiguracji zestawów icon w pliku .config i obs³uga autodownload,
+  przygotowane zestawy crystal16 i crystal22 (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
