--- a/ChangeLog
+++ b/ChangeLog
@@ -130,6 +130,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   archiwum a nie z nazw± modu³u lub zestawu - normalizuje nazwê (adrian)
 * mo¿liwo¶æ konfiguracji zestawów icon w pliku .config i obs³uga autodownload,
   przygotowane zestawy crystal16 i crystal22 (adrian)
+* kolejne poprawki Vogela na obs³ugê statusów (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
