--- a/ChangeLog
+++ b/ChangeLog
@@ -131,6 +131,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ konfiguracji zestawów icon w pliku .config i obs³uga autodownload,
   przygotowane zestawy crystal16 i crystal22 (adrian)
 * kolejne poprawki Vogela na obs³ugê statusów (joi)
+* drobne poprawki do wyboru przegl±darki: konfiguracja konquerora
+  i poprawka do firefoxa na debianie (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
