--- a/ChangeLog
+++ b/ChangeLog
@@ -133,6 +133,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kolejne poprawki Vogela na obs³ugê statusów (joi)
 * drobne poprawki do wyboru przegl±darki: konfiguracja konquerora
   i poprawka do firefoxa na debianie (joi)
+* zapamiêtywanie stanu szyfrowania przy zamkniêciu okna chatu (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
