dodany moduł desktop_docking Dorregaraya
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2562 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/THANKS
+++ b/THANKS
@@ -7,10 +7,11 @@ Krzysztof Godlewski
 Mariusz Witkowski
 Mateusz Papiernik
 Artur Zabroñski
-Marcin Ceglarek
-Rafa³ Malinowski
-Dariusz Arciszewski
-Gabor Wnuk
+Marcin "Ciuciu" Ceglarek
+Rafa³ "Vogel" Malinowski
+Dariusz "Arcisz" Arciszewski
+Gabor "Kid" Wnuk
 Kuba "Sad Mephisto" Ho³ubinka
+Tomasz "Dorregaray" Rostañski
 
 i inni...
