--- a/ChangeLog
+++ b/ChangeLog
@@ -134,6 +134,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne poprawki do wyboru przegl±darki: konfiguracja konquerora
   i poprawka do firefoxa na debianie (joi)
 * zapamiêtywanie stanu szyfrowania przy zamkniêciu okna chatu (joi)
+* dodany modu³ desktop_docking autorstwa Dorregaraya, s³u¿±cy symulacji dokowania
+  przy pomocy ma³ego okna z ustawion± flag± "zawsze na wierzchu" (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
