--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,10 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zapamiêtywanie stanu szyfrowania przy zamkniêciu okna chatu (joi)
 * dodany modu³ desktop_docking autorstwa Dorregaraya, s³u¿±cy symulacji dokowania
   przy pomocy ma³ego okna z ustawion± flag± "zawsze na wierzchu" (joi)
+* configure: zamiast opcji --with-qt-includes, with-qt-libs, with-qt-moc
+  bardziej ogólne --with-includes, with-libs, with-apps umo¿liwiaj±ce podanie
+  ¶cie¿ek, nawet kilku, do wyszukiwania. wp³ywa równie¿ na wyszukiwanie
+  bibliotek wymaganych przez modu³y (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
