--- a/ChangeLog
+++ b/ChangeLog
@@ -142,6 +142,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   bibliotek wymaganych przez modu³y (adrian)
 * drobna poprawka micha³a w configure do ./config.status --recheck (adrian)
 * Ikony NG by Arcisz
+* proxy: ostrze¿enie przy b³êdnym ustawieniu hosta i usuniêcie
+  sprawdzania czy port >= 1024 (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
