--- a/ChangeLog
+++ b/ChangeLog
@@ -144,6 +144,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Ikony NG by Arcisz
 * proxy: ostrze¿enie przy b³êdnym ustawieniu hosta i usuniêcie
   sprawdzania czy port >= 1024 (joi)
+* kadu nie próbuje siê zalogowaæ przy roz³±czaniu... (Vogel/joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
