--- a/ChangeLog
+++ b/ChangeLog
@@ -145,6 +145,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * proxy: ostrze¿enie przy b³êdnym ustawieniu hosta i usuniêcie
   sprawdzania czy port >= 1024 (joi)
 * kadu nie próbuje siê zalogowaæ przy roz³±czaniu... (Vogel/joi)
+* opcja wy¶lij sms w menu g³ównym przesuniêta wy¿ej, po otwarciu ni± okna
+  wysy³anie sms domy¶lnie aktywne jest pole "odbiorca" (adrian)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
