--- a/ChangeLog
+++ b/ChangeLog
@@ -141,12 +141,13 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ¶cie¿ek, nawet kilku, do wyszukiwania. wp³ywa równie¿ na wyszukiwanie
   bibliotek wymaganych przez modu³y (adrian)
 * drobna poprawka micha³a w configure do ./config.status --recheck (adrian)
-* Ikony NG by Arcisz (Ron_K)
+* ikony NG by Arcisz (Ron_K)
 * proxy: ostrze¿enie przy b³êdnym ustawieniu hosta i usuniêcie
   sprawdzania czy port >= 1024 (joi)
 * kadu nie próbuje siê zalogowaæ przy roz³±czaniu... (Vogel/joi)
 * opcja wy¶lij sms w menu g³ównym przesuniêta wy¿ej, po otwarciu ni± okna
   wysy³anie sms domy¶lnie aktywne jest pole "odbiorca" (adrian)
+* ³ata Vogela: powiadomienia o statusach + trochê moich zmian (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
