--- a/ChangeLog
+++ b/ChangeLog
@@ -150,6 +150,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * ³ata Vogela: powiadomienia o statusach + trochê moich zmian (joi)
 * przywrócona mo¿liwo¶æ wyboru portu przez który kadu ma sie ³±czyæ z
   serwerami (michal)
+* zmiana zestawu ikon nie wymaga restartowania ca³ego programu + nowe ikonki (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
