poprawione szukanie dodatkowych narzędzi dla modułów + ścieżki dla qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@2673 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -205,6 +205,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obrazki w oknie rozmowy ju¿ nie zmieniaj± siê znowu w klepsydrê po
   przyj¶ciu nowej wiadomo¶ci (adrian)
 * w autodownloadzie dodany limit czasu dla pobrañ modu³ów (joi)
+* configure i spece modu³ów: poprawione wykrywanie dodatkowych narzêdzi,
+  dodane ¶cie¿ki dla qt (joi)
 
 +++ wersja 0.3.9 (01.07.2004)
 * ostrze¿enie, ¿e drugie kadu jest uruchomione na tym samym profilu,
